plugins {
    id 'java'
}

group 'org.example'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(JavaExec) {
    jvmArgs += "--add-opens=java.base/java.time=ALL-UNNAMED"
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    // Gson 라이브러리
    implementation 'com.google.code.gson:gson:2.8.9'

    implementation 'com.zaxxer:HikariCP:5.0.0'

    implementation 'com.mysql:mysql-connector-j:8.0.33'

    implementation 'org.slf4j:slf4j-simple:2.0.0'
}

test {
    useJUnitPlatform()
}